assets/tests/Shaders/compilation_errors/vert.glsl
#version 420

#include "helpers.glsl"

void main(void)
{
    mattt4 m;
}